<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/bye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bye"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/gdbye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goodbye"
            android:textSize="30sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>